--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 </head>
 <body>
     <canvas id="jogoCanvas" width="800" height="400"></canvas>
-    <script src="jogo.js"></script>
+    <script src="jogo.js"></script>a
 </body>
 </html>
